--- a/scss/partials/_quienessomos_nosotros.scss
+++ b/scss/partials/_quienessomos_nosotros.scss
@@ -10,44 +10,72 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
             margin: 40px;
             font-size: 5rem;
             color: #000000;
 
-            @include Tablet4 {
-                margin-left: 140px;
-            }
-
-            @include Tablet5 {
-                margin-left: 100px;
-            }
-
-            @include Mobile {
-                margin-left: 70px;
-            }
-
-            @include Mobile2 {
-                margin-left: 50px;
-            }
-
-            @include Mobile3 {
-                font-size: 4.80rem;
+            @include Mobile4 {
+                font-size: 4rem;
             }
         }
     }
 }
 
-.nosotros{
+.nosotros__1{
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #2b2f31;
 
+    @include portatil6 {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
+
     .nosotros__cajita{
         width: 650px;
 
+        @include Tablet2 {
+            width: 600px;
+        }
+
+        @include Tablet2 {
+            width: 500px;
+        }
+
+        @include Tablet4 {
+            width: 400px;
+        }
+
+        @include Mobile {
+            width: 300px;
+        }
+
         .nosotros__img{
             width: 580px;
+
+            @include portatil6 {
+                display: block; /* Convierte la imagen en un elemento de bloque */
+                margin: 0 auto; /* Aplica márgenes automáticos horizontalmente */
+            }
+
+            @include Tablet2 {
+                width: 500px;
+            }
+            
+            @include Tablet3 {
+                width: 450px;
+            }
+
+            @include Tablet4 {
+                width: 400px;
+            }
+
+            @include Mobile {
+                width: 300px;
+            }
         }
 
         .nosotros__size__titulo{
@@ -57,6 +85,14 @@
             font-size: 5.5rem;
             color:  #E29505;
             -webkit-text-stroke: 2px #e4d7d7;
+
+            @include Tablet5 {
+                font-size: 5rem;
+            }
+
+            @include Mobile {
+                font-size: 4rem;;
+            }
         }
         .nosotros__size__parrafo{
             display: flex;
@@ -65,10 +101,92 @@
             font-family: 'Oswald', sans-serif;
             color: white;
         }
+    }
+}
 
+.nosotros__2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2b2f31;
+
+    @include portatil6 {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-bottom: 50px;
+    }
+
+    .nosotros__cajita{
+        width: 650px;
+
+        @include Tablet2 {
+            width: 600px;
+        }
+
+        @include Tablet3 {
+            width: 500px;
+        }
+
+        @include Tablet4 {
+            width: 400px;
+        }
+
+        @include Mobile {
+            width: 300px;
+        }
+
+        .nosotros__size__titulo{
+            display: flex;
+            justify-content: center;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 5.5rem;
+            color:  #E29505;
+            -webkit-text-stroke: 2px #e4d7d7;
+
+            @include Tablet5 {
+                font-size: 5rem;
+            }
+
+            @include Mobile {
+                font-size: 4rem;;
+            }
+        }
+        .nosotros__size__parrafo{
+            display: flex;
+            text-align: center;
+            font-size: 1.3rem;
+            font-family: 'Oswald', sans-serif;
+            color: white;
+
+            @include Tablet2 {
+                font-size: 1.1rem;
+            }
+        }
         .nosotros__img2{
             width: 580px;
             margin-left: 30px;
+
+            @include Tablet2 {
+                width: 500px;
+            }
+
+            @include Tablet3 {
+                width: 450px;
+                margin-left: 0px;
+            }
+
+            @include Tablet4 {
+                width: 420px;
+                margin-left: 0px;
+            }
+
+            @include Tablet5 {
+                width: 400px;
+            }
+
+            @include Mobile {
+                width: 300px;
+            }
         }
     }
 }
@@ -84,19 +202,45 @@
         .nosotros__trabajo__titulo{
             display: flex;
             justify-content: center;
+            text-align: center;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: 5.5rem;
             color:  #E29505;
             -webkit-text-stroke: 2px #e4d7d7;
+
+            @include Tablet2 {
+                font-size: 4.5rem;
+            }
+
+            @include Tablet3 {
+                font-size: 3.5rem;
+            }
+
+            @include Mobile {
+                font-size: 3rem;
+            }
         }
 
         .nosotros__trabajo__titulo2{
             display: flex;
             justify-content: center;
+            text-align: center;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: 4rem;
             color:  #E29505;
             -webkit-text-stroke: 2px #e4d7d7;
+
+            @include Tablet2 {
+                font-size: 3.5rem;
+            }
+
+            @include Tablet3 {
+                font-size: 2.5rem;
+            }
+
+            @include Mobile {
+                font-size: 2rem;;
+            }
         }
     }
 
@@ -105,9 +249,26 @@
         margin: auto;
         margin-top: 50px;
 
+        @include Tablet {
+            width: 600px;
+        }
+
+        @include Tablet2 {
+            width: 500px;
+        }
+
+        @include Tablet3 {
+            width: 400px;
+        }
+
+        @include Mobile {
+            width: 300px;
+        }
+
         .nosotros__form__size{
             display: flex;
             justify-content: center;
+            text-align: center;
             font-size: 3rem;
             color: white;
         }
@@ -128,6 +289,7 @@
     .nosotros__separador__final{
         display: flex;
         justify-content: center;
+        text-align: center;
         margin-top: 30px;
         margin-bottom: 30px;
 
@@ -136,6 +298,22 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             color:  #E29505;
             -webkit-text-stroke: 2px #e4d7d7;
+
+            @include Tablet3 {
+                font-size: 6rem;
+            }
+
+            @include Tablet4 {
+                font-size: 5.75rem;
+            }
+
+            @include Tablet4 {
+                font-size: 5rem;
+            }
+
+            @include Mobile {
+                font-size: 4rem;
+            }
         }
     }
 }
