--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -68,8 +68,9 @@
             background-color: transparent;
 
             @include portatil6 {
-                background: rgb(255,214,90);
-                border: 2px solid black;  
+                background: linear-gradient(to right, rgb(255,214,90), #ffcc80);
+                border: 1px solid black;
+                border-radius: 5px;  
                 justify-content: center;
                 padding: 0rem;
             }
@@ -147,7 +148,9 @@
                         @include portatil6 {
                             color: black;
                             align-items: center;
-                            font-size: 1.60rem;
+                            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                            font-size: 2.10rem;
+                            -webkit-text-stroke: 1px rgb(247, 224, 182);
                             width: 40px;
                             color: rgb(0, 0, 0);
                         }
