--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -18,21 +18,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                text-align: center;
                 margin: 40px;
                 font-size: 5rem;
                 color: #000000;
-
-                @include Tablet5 {
-                    margin-left: 120px;
-                }
-
-                @include Mobile2{
-                    margin-left: 80px;
-                }
-
-                @include Mobile4{
-                    margin-left: 40px;
-                }
             }
         }
     }
@@ -50,6 +39,18 @@
                 font-size: 3rem;
                 -webkit-text-stroke: 1px black;
                 color: #E29505;
+
+                @include Tablet5 {
+                    font-size: 2.50rem;
+                }
+
+                @include Mobile {
+                    font-size: 2.10rem;
+                }
+
+                @include Mobile3 {
+                    font-size: 1.80rem;
+                }
 
                 &:hover {
                     text-decoration: underline #E29505;
@@ -69,6 +70,14 @@
             -webkit-text-stroke: 2px #000000;
             text-shadow: 4px 4px 4px #000;
 
+            @include Tablet5 {
+                font-size: 9rem;
+            }
+
+            @include Mobile {
+                font-size: 8rem;
+            }
+
             @include Mobile2 {
                 font-size: 6.80rem;
                 color: #fbbe00;
@@ -82,6 +91,20 @@
         }
     }
 
+    .productos__subtitulo__seccion__desc{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 30px;
+
+        .productos__subtitulo__seccion__desc__size{
+            text-align: center;
+            font-size: 2.10rem;
+            -webkit-text-stroke: 1px #fbbe00;
+            color: #000000;
+            width: 800px;
+        }
+    }
+
     .container__productos{
         min-height: 40vh;
         width: 100%;
@@ -91,6 +114,12 @@
         max-width: 1400px;
         margin: auto;
         margin-bottom: 65px;
+
+        @include portatil8 {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 0px;
+        }
 
         .caja__productos{
             width: 400px;
@@ -124,6 +153,31 @@
                 align-items: center;
             }
 
+            @include Tablet5 {
+                width: 370px;
+                height: 320px;
+            }
+
+            @include Mobile {
+                width: 340px;
+                height: 290px;
+            }
+
+            @include Mobile2 {
+                width: 320px;
+                height: 270px;
+            }
+
+            @include Mobile3 {
+                width: 300px;
+                height: 260px;
+            }
+
+            @include Mobile4 {
+                width: 270px;
+                height: 230px;
+            }
+
             .productos__capa{
                 position: absolute;
                 top: 0;
@@ -138,6 +192,10 @@
                 flex-direction: column;
                 transform: scale(0);
                 transition: .1s;
+
+                @include portatil8 {
+                    transform: scale(1);
+                }
 
                 .productos__capa__titulo{
                     font-size: 4rem;
