agregue animacion, contenido en inicio y en Locales y productos faltan detalles de nuevo contenido

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -117,11 +117,17 @@
                     font-weight: 4rem;
                     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
+                    animation: bounce;
+                    animation-duration: 1s; 
+
                     @include portatil6 {
                         display: flex;
                         flex-direction: column;
                         justify-content: start;
                         gap: 1rem;
+
+                        animation: none;
+                        animation-duration: none; 
                     }
 
                     .header__lista{
