--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -22,6 +22,8 @@
                 margin: 40px;
                 font-size: 5rem;
                 color: #000000;
+                animation: fadeInDown;
+                animation-duration: 1.5s;
             }
         }
     }
@@ -69,6 +71,12 @@
             color: #fbbe00;
             -webkit-text-stroke: 2px #000000;
             text-shadow: 4px 4px 4px #000;
+            transform: rotate(0deg);
+            transition: 1s;
+
+            &:hover {
+                transform: rotate(-10deg);
+            }
 
             @include Tablet5 {
                 font-size: 9rem;
@@ -190,6 +198,7 @@
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
+                text-align: center;
                 transform: scale(0);
                 transition: .1s;
 
