--- a/scss/partials/_inicio_grid.scss
+++ b/scss/partials/_inicio_grid.scss
@@ -296,3 +296,57 @@
     }
 }
 
+.inicio__card{
+    display: flex;
+    justify-content: center;
+    background-color: #2b2f31;
+    padding: 100px;
+
+    @include portatil9 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inicio__card__div{
+        margin: 20px;
+        transition: 1s;
+        transform: scale(1);
+
+        @include portatil9 {
+            margin: 35px;
+        }
+
+        &:hover {
+            transform: scale(1.10);
+            box-shadow: 0px 10px 5px 5px rgb(160, 159, 159);
+
+            @include Mobile2 {
+                transform: scale(1.04);
+            }
+
+            @include Mobile4 {
+                transform: none;
+            }
+        }
+    }
+
+    .card__titulo{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-size: 1.50rem;
+    }
+
+    .card__texto{
+        text-align: center;
+    }
+
+    .card_boton{
+        display: flex;
+        justify-content: center;
+        background-color: rgb(216, 133, 24);
+        border: rgb(216, 133, 24);
+    }
+}
+
