--- a/scss/partials/_locales.scss
+++ b/scss/partials/_locales.scss
@@ -17,6 +17,8 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            animation: fadeInDown;
+            animation-duration: 1.5s;
         }
     }
 
