--- a/scss/partials/_quienessomos_nosotros.scss
+++ b/scss/partials/_quienessomos_nosotros.scss
@@ -14,6 +14,8 @@
             margin: 40px;
             font-size: 5rem;
             color: #000000;
+            animation: fadeInDown;
+            animation-duration: 1.5s;
 
             @include Mobile4 {
                 font-size: 4rem;
@@ -298,6 +300,12 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             color:  #E29505;
             -webkit-text-stroke: 2px #e4d7d7;
+            transform: scale(1);
+            transition: 1s;
+
+            &:hover {
+                transform: scale(1.05);
+            }
 
             @include Tablet3 {
                 font-size: 6rem;
