--- a/scss/partials/_registrarme.scss
+++ b/scss/partials/_registrarme.scss
@@ -14,6 +14,8 @@
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         border: 2px solid black;
         flex-wrap: wrap;
+        animation: fadeIn;
+        animation-duration: 2.7s;
 
         .div__logo__registrarme{
             margin: 10px;
