--- a/scss/style.css
+++ b/scss/style.css
@@ -163,6 +163,8 @@ a {
   align-items: center;
   font-weight: 4rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  animation: bounce;
+  animation-duration: 1s;
 }
 @media (max-width: 990px) {
   .navbar.bg-body-tertiary .header__father .header .header__nav .header__titulo {
@@ -170,6 +172,8 @@ a {
     flex-direction: column;
     justify-content: start;
     gap: 1rem;
+    animation: none;
+    animation-duration: none;
   }
 }
 .navbar.bg-body-tertiary .header__father .header .header__nav .header__titulo .header__lista {
@@ -394,6 +398,10 @@ a {
 }
 .maininicio .maininicio1 .maintexto .mainbutton:hover {
   background-color: rgb(201, 130, 0);
+}
+.maininicio .maininicio1 .mainpromoburguer {
+  animation: backInRight;
+  animation-duration: 1.5s;
 }
 @media (max-width: 850px) {
   .maininicio .maininicio1 .mainpromoburguer {
@@ -756,6 +764,59 @@ a {
   }
 }
 
+.inicio__card {
+  display: flex;
+  justify-content: center;
+  background-color: #2b2f31;
+  padding: 100px;
+}
+@media (max-width: 850px) {
+  .inicio__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.inicio__card .inicio__card__div {
+  margin: 20px;
+  transition: 1s;
+  transform: scale(1);
+}
+@media (max-width: 850px) {
+  .inicio__card .inicio__card__div {
+    margin: 35px;
+  }
+}
+.inicio__card .inicio__card__div:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 10px 5px 5px rgb(160, 159, 159);
+}
+@media (max-width: 375px) {
+  .inicio__card .inicio__card__div:hover {
+    transform: scale(1.04);
+  }
+}
+@media (max-width: 320px) {
+  .inicio__card .inicio__card__div:hover {
+    transform: none;
+  }
+}
+.inicio__card .card__titulo {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.inicio__card .card__texto {
+  text-align: center;
+}
+.inicio__card .card_boton {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(216, 133, 24);
+  border: rgb(216, 133, 24);
+}
+
 /*seccion Inicio
 
 /*seccion Productos*/
@@ -784,6 +845,8 @@ a {
   margin: 40px;
   font-size: 5rem;
   color: #000000;
+  animation: fadeInDown;
+  animation-duration: 1.5s;
 }
 .mainproductos .secciones__menu {
   display: flex;
@@ -828,6 +891,11 @@ a {
   color: #fbbe00;
   -webkit-text-stroke: 2px #000000;
   text-shadow: 4px 4px 4px #000;
+  transform: rotate(0deg);
+  transition: 1s;
+}
+.mainproductos .productos__subtitulo__seccion .productos__subtitulo__seccion__size:hover {
+  transform: rotate(-10deg);
 }
 @media (max-width: 480px) {
   .mainproductos .productos__subtitulo__seccion .productos__subtitulo__seccion__size {
@@ -952,6 +1020,7 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   transform: scale(0);
   transition: 0.1s;
 }
@@ -1142,6 +1211,8 @@ a {
   justify-content: center;
   align-items: center;
   text-align: center;
+  animation: fadeInDown;
+  animation-duration: 1.5s;
 }
 .main__locales .container__desc {
   display: flex;
@@ -1253,6 +1324,8 @@ a {
   margin: 40px;
   font-size: 5rem;
   color: #000000;
+  animation: fadeInDown;
+  animation-duration: 1.5s;
 }
 @media (max-width: 320px) {
   .nosotros__subtitulo .seccion__nosotros .sobre__nosotros {
@@ -1557,6 +1630,11 @@ a {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #E29505;
   -webkit-text-stroke: 2px #e4d7d7;
+  transform: scale(1);
+  transition: 1s;
+}
+.nosotros__trabajo .nosotros__separador__final .nosotros__separador__final__size:hover {
+  transform: scale(1.05);
 }
 @media (max-width: 615px) {
   .nosotros__trabajo .nosotros__separador__final .nosotros__separador__final__size {
@@ -1597,6 +1675,8 @@ a {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   border: 2px solid black;
   flex-wrap: wrap;
+  animation: fadeIn;
+  animation-duration: 2.7s;
 }
 .menu__registrarme .tarjeta__registrarme .div__logo__registrarme {
   margin: 10px;
