Listo para entrega final

--- a/scss/partials/_quienessomos_nosotros.scss
+++ b/scss/partials/_quienessomos_nosotros.scss
@@ -39,6 +39,9 @@
     .nosotros__cajita{
         width: 650px;
 
+        animation: jackInTheBox;
+        animation-duration: 2.5s;
+
         @include Tablet2 {
             width: 600px;
         }
